fix overflow

--- a/src/styles/components/_rarity.scss
+++ b/src/styles/components/_rarity.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   font-weight: 500;
   padding: 110px 0 285px;
+  overflow: hidden;
 
   &__title {
     font-size: 36px;
